; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_vertexbuffer_get_data.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_vertexbuffer_get_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.gs_vb_data* (i32*)* }
%struct.gs_vb_data = type { i32 }

@.str = private unnamed_addr constant [25 x i8] c"gs_vertexbuffer_get_data\00", align 1
@thread_graphics = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.gs_vb_data* @gs_vertexbuffer_get_data(i32* %0) #0 {
  %2 = alloca %struct.gs_vb_data*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i32 @gs_valid_p(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32* %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store %struct.gs_vb_data* null, %struct.gs_vb_data** %2, align 8
  br label %15

8:                                                ; preds = %1
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** @thread_graphics, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load %struct.gs_vb_data* (i32*)*, %struct.gs_vb_data* (i32*)** %11, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = call %struct.gs_vb_data* %12(i32* %13)
  store %struct.gs_vb_data* %14, %struct.gs_vb_data** %2, align 8
  br label %15

15:                                               ; preds = %8, %7
  %16 = load %struct.gs_vb_data*, %struct.gs_vb_data** %2, align 8
  ret %struct.gs_vb_data* %16
}

declare dso_local i32 @gs_valid_p(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
